creamos el array incial con 10 objetos

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Inicio</title>
 </head>
 <body>
-    <script src="./main.js"></script>
+    <script src="./pruebas.js"></script>
 </body>
 </html>
